# HM

./: HM.cabal
app/: Main.hs
src/: #Lambda.hs#  .#Lambda.hs  Lambda.hs
tests/: LambdaTests.hs
